Add option to filter out products provided by partners

--- a/decapromolist/decapromolist.html
+++ b/decapromolist/decapromolist.html
@@ -104,7 +104,8 @@
                     { name: "op", title: "Cena reg", type: "text", sorter: "number", width: 20 },
                     { name: "pr", title: "Cena", type: "text", sorter: "number", width: 20 },
                     { name: "dc", title: "Zniżka", type: "text", sorter: "number", width: 10 },
-                    { name: "or", title: "Operacja", type: "text", width: 70 }
+                    { name: "or", title: "Operacja", type: "text", width: 70 },
+                    { name: "de", title: "Partner", type: "text", width: 10 }
                 ]
             });
             insertFilterValues();
